[package]
name = "xkcd-wallpaper"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "CLI Tool to download and generate wallpapers from xkcd comics."
repository = "https://github.com/filipepcampos/xkcd-wallpaper"
readme = "README.md"
keywords = ["xkcd", "wallpaper"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [
    "assets/*",
]


[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.14"
ureq = { version = "3.0.11", features = ["json"] }
